--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "javascript-time-ago": "^2.5.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
