--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mfkdf-application-demo",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://demo.mfkdf.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
